adding completed notebooks